--- a/example/index.html
+++ b/example/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset=utf-8 />
-    <title>Newhome</title>
+    <title>RealEstateMaps</title>
     <script src='../libjs/newhome.js'></script>
   </head>
   <body>
